--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Forside</title>
   </head>
   <body>
-    <header></header>
+    <header>hoved</header>
     <main></main>
     <footer></footer>
   </body>
