--- a/producter.html
+++ b/producter.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
-    <link rel="forside" href="style/forside.css" />
-    <link rel="general" href="style/general.css" />
+    <link rel="forside" href="css/forside.css" />
+    <link rel="general" href="css/general.css" />
     <title>Produkter</title>
   </head>
   <body>
