--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
-    <link rel="forside" href="style/forside.css" />
-    <link rel="general" href="style/general.css" />
+    <link rel="forside" href="css/forside.css" />
+    <link rel="general" href="css/general.css" />
     <title>Forside</title>
   </head>
   <body>
     <header>hoved</header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
+    </footer>
   </body>
 </html>
