--- a/proces.html
+++ b/proces.html
@@ -9,7 +9,15 @@
     <title>Process</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <a href="index.html">Hjem</a>
+        <a href="producter.html">Galleri</a>
+        <a href="proces.html">Process</a>
+        <a href="projecter.html">Projecter</a>
+        <a href="historie.html">Om Drej</a>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
