--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <title>Forside</title>
   </head>
   <body>
-    <header>hoved</header>
+    <header>
+      <nav>
+        <a href="index.html">Hjem</a>
+        <a href="producter.html">Galleri</a>
+        <a href="proces.html">Process</a>
+        <a href="projecter.html">Projecter</a>
+        <a href="historie.html">Om Drej</a>
+      </nav>
+    </header>
     <main></main>
     <footer>
       <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
