--- a/projecter.html
+++ b/projecter.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
-    <link rel="forside" href="css/forside.css" />
-    <link rel="general" href="css/general.css" />
+    <link rel="layout" href="css/layout.css" />
+    <link rel="style" href="css/style.css" />
     <title>Projecter</title>
   </head>
   <body>
