--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   </head>
   <body>
     <header>
+      <img src="imgs/drejlogoheader.svg" class="headerlogo" alt="drejlogo" />
       <nav>
-        <a href="index.html">Hjem</a>
-        <a href="producter.html">Galleri</a>
-        <a href="proces.html">Process</a>
-        <a href="projecter.html">Projecter</a>
-        <a href="historie.html">Om Drej</a>
+        <ul>
+          <a href="index.html">Hjem</a>
+          <a href="producter.html">Galleri</a>
+          <a href="proces.html">Process</a>
+          <a href="projecter.html">Projecter</a>
+          <a href="historie.html">Om Drej</a>
+        </ul>
       </nav>
     </header>
     <main></main>
