--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <header>
-      <img src="imgs/drejlogoheader.svg" class="headerlogo" alt="drejlogo" />
+      <div class="headerlogo">
+        <img src="imgs/drejlogoheader.svg" alt="drejlogo" />
+      </div>
       <nav>
         <ul>
           <a href="index.html">Hjem</a>
