--- a/projecter.html
+++ b/projecter.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <header>
-      <img src="imgs/drejlogoheader.svg" alt="drejlogo" />
+      <div class="headerlogo">
+        <img src="imgs/drejlogoheader.svg" alt="drejlogo" />
+      </div>
       <nav>
         <ul>
           <a href="index.html">Hjem</a>
@@ -22,6 +24,8 @@
       </nav>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
+    </footer>
   </body>
 </html>
