--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="imgs/drejlogoheader.svg" alt="drejlogo" />
       </div>
       <nav>
-        <ul>
+        <ul class="headerul">
           <a href="index.html">Hjem</a>
           <a href="producter.html">Galleri</a>
           <a href="proces.html">Process</a>
@@ -25,7 +25,18 @@
     </header>
     <main></main>
     <footer>
-      <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
+      <div>
+        <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
+      </div>
+      <div>
+        <h2>adresse</h2>
+        <p>Tårnvænget 46 3300 Frederiksværk</p>
+      </div>
+      <div>
+        <h2>kontakt</h2>
+        <p>j.k.hojvang@gmail.com</p>
+        <p>+4526187560</p>
+      </div>
     </footer>
   </body>
 </html>
