--- a/projecter.html
+++ b/projecter.html
@@ -14,7 +14,7 @@
         <img src="imgs/drejlogoheader.svg" alt="drejlogo" />
       </div>
       <nav>
-        <ul>
+        <ul class="headerul">
           <a href="index.html">Hjem</a>
           <a href="producter.html">Galleri</a>
           <a href="proces.html">Process</a>
