--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Forside</title>
   </head>
   <body>
