--- a/producter.html
+++ b/producter.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/producter.css" />
     <title>Produkter</title>
   </head>
   <body>
