--- a/projecter.html
+++ b/projecter.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/projecter.css" />
     <title>Projecter</title>
   </head>
   <body>
@@ -23,7 +24,9 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <h1>GALLERI</h1>
+    </main>
     <footer>
       <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
     </footer>
