--- a/producter.html
+++ b/producter.html
@@ -24,7 +24,9 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <h1>GALLERI</h1>
+    </main>
     <footer>
       <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
     </footer>
