--- a/producter.html
+++ b/producter.html
@@ -28,7 +28,18 @@
       <h1>GALLERI</h1>
     </main>
     <footer>
-      <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
+      <div>
+        <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
+      </div>
+      <div>
+        <h2>adresse</h2>
+        <p>Tårnvænget 46 3300 Frederiksværk</p>
+      </div>
+      <div>
+        <h2>kontakt</h2>
+        <p>j.k.hojvang@gmail.com</p>
+        <p>+4526187560</p>
+      </div>
     </footer>
   </body>
 </html>
