--- a/producter.html
+++ b/producter.html
@@ -25,7 +25,9 @@
       </nav>
     </header>
     <main>
-      <h1>GALLERI</h1>
+      <div class="h1bilde">
+        <h1>GALLERI</h1>
+      </div>
     </main>
     <footer>
       <div>
@@ -41,5 +43,6 @@
         <p>+4526187560</p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
