--- a/producter.html
+++ b/producter.html
@@ -28,6 +28,7 @@
       <div class="h1bilde">
         <h1>GALLERI</h1>
       </div>
+      <div class="skaalcontainer"></div>
     </main>
     <footer>
       <div>
