--- a/producter.html
+++ b/producter.html
@@ -28,6 +28,12 @@
       <div class="h1bilde">
         <h1>GALLERI</h1>
       </div>
+      <p class="overst">
+        Jeg foretrækker at anvende træ, der er vokset i Danmark. Men dansk
+        vokset valnød er meget svær at skaffe, derfor bruger jeg ind imellem
+        importeret europæisk og amerikansk valnød. Alle mine skåle er mærket med
+        skål nummer og årstal, 74/19 betyder skål nr 74 produseret i 2019.
+      </p>
       <div class="skaalcontainer"></div>
     </main>
     <footer>
