--- a/historie.html
+++ b/historie.html
@@ -25,7 +25,12 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+
+      <div class="historieh1">
+        <h1>OM MIG</h1>
+      </div>
+    </main>
     <footer>
       <div>
         <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
