--- a/historie.html
+++ b/historie.html
@@ -28,8 +28,18 @@
     <main>
 
       <div class="historieh1">
-        <h1>OM MIG</h1>
+        <h1>OM DREJ</h1>
       </div>
+      <div class="hobby">
+      <div class="hobbytekst">
+      <h2>FRA HOBBY TIL VIRKSOMHED</h2>
+      <p>bla bla bla bla bla bla</p>
+    </div>
+    <div class="jens">
+      <img src="imgs/jensmedskaal.webp" alt="jensmedskaal"/>
+</div>
+    </div>
+    
     </main>
     <footer>
       <div>
