--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="grid_3-2">
+        <div class="logo_boks">
+          <img src="/imgs/drejlogoheader.svg" alt="logo" />
+        </div>
+        <div class="grid_1-1-1-1">
+          <img src="" alt="" />
+          <video controls src=""></video>
+          <p>
+            hånd drejede skåle af højeste kvalitet. Med focus på det smukke i
+            træet, hver en skål her er unik og lavet med kærlighed.
+          </p>
+        </div>
+      </div>
+    </main>
     <footer>
       <div>
         <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
