--- a/proces.html
+++ b/proces.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/proces.css" />
+    <link rel="stylesheet" href="css/projecter.css" />
     <title>Process</title>
   </head>
   <body>
@@ -25,7 +25,41 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="top">
+        <p>
+          Min drejebænk er en ældre, men nyrenoveret Promat drejebænk med
+          frihøjde på 30 cm, det giver mulighed for at dreje fade og skåle med
+          op til 50 cm diameter. Det er en dejlig tung og stabil bænk. Slibestøv
+          og fine spåner opfanger jeg med en Luna BDC 240 spånsuger. Svævestøv
+          fjernes med en Record luftrenser. Som støvmaske bruger jeg en
+          Axminster APF 10 Evolution powered respirator. Den yder en effektiv
+          beskyttelse mod det støv spånsugeren og luftrenseren ikke fanger og
+          virker samtidig som beskyttelsesvisir.
+        </p>
+      </div>
+      <h2>1 Tøring og Grovdrejning</h2>
+
+      <div class="grid_1">
+        <div class="item_1">
+          <h3></h3>
+          <p>
+            Når klodsen skaL grovdrejes, skruer jeg en planskive på klodsens
+            flade side, så jeg kan montere den på drejebænken. Herefter drejes
+            ydersiden af og der formes en tenon på skålens bund. Herefter
+            spændes skålen op på tenonen i en spændpatron, og skålens indre
+            drejes bort, således at slut vægtykkelsen er minimum 10% af skålens
+            diameter. Derpå forsegles endetræet med hydrovoks både udvendig og
+            indvendig. Herefter pakkes den grovdrejede skål ind i 20 til 30 lag
+            avispapir, vejes og sættes til tørring ved 21°C og ca. 50 %
+            luftfugtighed, på øverste hylde i kontoret.
+          </p>
+        </div>
+        <div class="item_2">
+          <img src="" alt="" />
+        </div>
+      </div>
+    </main>
     <footer>
       <div>
         <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
