--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
           <img src="/imgs/drejlogoheader.svg" alt="logo" />
         </div>
         <div class="grid_1-1-1-1">
-          <img src="" alt="" />
-          <video controls src=""></video>
+          <img src="/imgs/udstilling.webp" alt="Jens og skåle på udstilling" />
+          <video controls src="/imgs/video_kvadrat.webm"></video>
           <p>
             hånd drejede skåle af højeste kvalitet. Med focus på det smukke i
             træet, hver en skål her er unik og lavet med kærlighed.
           </p>
+          <img src="/imgs/Bowls.webp" alt="skåle" />
         </div>
       </div>
     </main>
