nogle lunde kodet ik perefket men ting er sat ind

--- a/proces.html
+++ b/proces.html
@@ -26,6 +26,10 @@
       </nav>
     </header>
     <main>
+      <div class="under">
+        <img src="https://picsum.photos/1470/700" alt="" />
+      </div>
+      <div class="over"><h1>proses</h1></div>
       <div class="top">
         <p>
           Min drejebænk er en ældre, men nyrenoveret Promat drejebænk med
@@ -38,11 +42,13 @@
           virker samtidig som beskyttelsesvisir.
         </p>
       </div>
-      <h2>1 Tøring og Grovdrejning</h2>
+      <div class="over">
+        <h2>1 Tøring og Grovdrejning</h2>
+      </div>
 
       <div class="grid_1">
-        <div class="item_1">
-          <h3></h3>
+        <div class="item_1 text">
+          <h3>Tøring</h3>
           <p>
             Når klodsen skaL grovdrejes, skruer jeg en planskive på klodsens
             flade side, så jeg kan montere den på drejebænken. Herefter drejes
@@ -56,7 +62,104 @@
           </p>
         </div>
         <div class="item_2">
-          <img src="" alt="" />
+          <img src="https://picsum.photos/600/600" alt="" />
+        </div>
+      </div>
+
+      <div class="grid_2 text">
+        <div class="item_2_1">
+          <h3>Grovdrejning</h3>
+          <p>
+            Når klodsen skaL grovdrejes, skruer jeg en planskive på klodsens
+            flade side, så jeg kan montere den på drejebænken. Herefter drejes
+            ydersiden af og der formes en tenon på skålens bund. Herefter
+            spændes skålen op på tenonen i en spændpatron, og skålens indre
+            drejes bort, således at slut vægtykkelsen er minimum 10% af skålens
+            diameter. Derpå forsegles endetræet med hydrovoks både udvendig og
+          </p>
+        </div>
+        <div class="item_2_2">
+          <img src="https://picsum.photos/550/250" alt="" />
+        </div>
+      </div>
+      <div class="over">
+        <h2>2. fin drjning</h2>
+      </div>
+      <div class="flex_c1 text">
+        <div>
+          <img src="https://picsum.photos/500/400" alt="" />
+        </div>
+        <div class="item_3">
+          <h3>Fra Grovdrejet til fin drejet</h3>
+          <p>
+            Er udgangspunktet grovdrejede skåle, starter jeg med at rette
+            skålens overkant af med en elhøvl, så den bliver nogenlunde plan.
+            Derefter spænder jeg emnet omvendt op i drejebænken med åbningen ind
+            mod spændpatronen, - i en spændpatron monteret med 460 mm Vicmarc
+            skålbakker. Emnet støttes med pinolen på tenonen, og denne drejes
+            rund.
+          </p>
+        </div>
+      </div>
+      <div class="flex_c2 text">
+        <div class="item_4">
+          <h3>Fin drjet skål</h3>
+          <p>
+            Når skålens ud- og indvendige sider er færdiggjort og slebet, vendes
+            skålen og spændes op i spændpatronen monteret med 480 mm skålbakker.
+            For at undgå at bakkerne laver mærker på skålens sider, monteres
+            skålen med en læderrem eller gummibånd mellem bakkerne og skålens
+            sider.
+          </p>
+        </div>
+        <div><img src="https://picsum.photos/600/400" alt="" /></div>
+      </div>
+      <div class="over">
+        <h2>3. slibning</h2>
+      </div>
+      <div class="grid_3 text">
+        <div class="flex_c3">
+          <div>
+            <h3>værktøj</h3>
+            <p>
+              Korn 150 slibeskiver er svære at fremskaffe. Dem fremstiller jeg
+              derfor selv ved at lime tyndt stof, der hæfter på velcro, bag på
+              korn 150 slibelærred
+            </p>
+          </div>
+          <div>
+            <img src="https://picsum.photos/600/400" alt="" />
+          </div>
+        </div>
+        <div class="flex_c3 box2">
+          <div>
+            <h3>slibning</h3>
+            <p>
+              Korn 150 slibeskiver er svære at fremskaffe. Dem fremstiller jeg
+              derfor selv ved at lime tyndt stof, der hæfter på velcro, bag på
+              korn 150 slibelærred
+            </p>
+          </div>
+          <div>
+            <img src="https://picsum.photos/550/430" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="over">
+        <h2>4. larkering</h2>
+      </div>
+      <div class="text flex_c2 farve">
+        <div><img src="https://picsum.photos/550/430" alt="" /></div>
+        <div>
+          <h3>penslingen</h3>
+          <p>
+            Lakering Denne type pensel resulterer i en meget jævn fordeling af
+            lakken og efterlader den færdige overflade næsten helt glat uden
+            striber, der let kan mat-slibes til en silkeblød robust overflade.
+            Afhængig af arbejdstemperaturen fortynder jeg lakken i forholdet 1:1
+            eller 1:2 med Pur S9004 fortynder. Man skal prøve sig lidt frem,
+            lakken skal løbe sammen uden der opstår løbere. Det var Børge fra
+          </p>
         </div>
       </div>
     </main>
