--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
   </head>
   <body>
     <header>
-      <div class="headerlogo">
-        <img src="imgs/drejlogoheader.svg" alt="drejlogo" />
-      </div>
       <nav>
         <ul class="headerul">
           <a href="index.html">Hjem</a>
@@ -26,20 +23,49 @@
       </nav>
     </header>
     <main>
-      <div class="grid_3-2">
+      <section class="grid_2-3">
         <div class="logo_boks">
           <img src="/imgs/drejlogoheader.svg" alt="logo" />
         </div>
         <div class="grid_1-1-1-1">
           <img src="/imgs/udstilling.webp" alt="Jens og skåle på udstilling" />
-          <video controls src="/imgs/video_kvadrat.webm"></video>
-          <p>
-            hånd drejede skåle af højeste kvalitet. Med focus på det smukke i
-            træet, hver en skål her er unik og lavet med kærlighed.
-          </p>
+          <div class="video_kvadrat">
+            <video autoplay muted loop src="/imgs/video_kvadrat.webm"></video>
+          </div>
+          <div class="farve_boks">
+            <p>
+              Hånd drejede skåle af højeste kvalitet. Med focus på det smukke i
+              træet, hver en skål her er unik og lavet med kærlighed.
+            </p>
+          </div>
           <img src="/imgs/Bowls.webp" alt="skåle" />
         </div>
-      </div>
+      </section>
+      <section class="grid_1-1">
+        <div>
+          <h2>SE SKÅLE</h2>
+          <p>
+            Målet er at skabe smukke ting fremstillet af fortrinsvis dansk træ,
+            frisk fra skov eller savværk. Her finder du alle de forskellige
+            skåle jeg har krearet samt mål, priser og generel information
+            omkring træet.
+          </p>
+          <img src="/imgs/pil.svg" alt="pil" />
+        </div>
+        <div><img src="/imgs/bowl_udenbg.png" alt="skål" /></div>
+      </section>
+      <section class="grid_1-1">
+        <div><img src="/imgs/tools.JPG" alt="værktøjer i værkstedet" /></div>
+        <div>
+          <h2>SE FREMGANGSMÅDE</h2>
+          <p>
+            Her kan du du komme bag metoden fra grovdrejning, findrejdning til
+            det færdige produkt. Samt hvilke værktøjer jeg gør brug af under
+            hele processen.
+          </p>
+          <img src="/imgs/pil.svg" alt="pil" />
+        </div>
+      </section>
     </main>
     <footer>
       <div>
