--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <video autoplay muted loop src="/imgs/video_kvadrat.webm"></video>
           </div>
           <div class="farve_boks">
-            <p>
+            <h5>
               Hånd drejede skåle af højeste kvalitet. Med focus på det smukke i
               træet, hver en skål her er unik og lavet med kærlighed.
-            </p>
+            </h5>
           </div>
           <img src="/imgs/Bowls.webp" alt="skåle" />
         </div>
       </section>
       <section class="grid_1-1">
-        <div>
+        <div class="se_bowls">
           <h2>SE SKÅLE</h2>
           <p>
             Målet er at skabe smukke ting fremstillet af fortrinsvis dansk træ,
@@ -50,20 +50,22 @@
             skåle jeg har krearet samt mål, priser og generel information
             omkring træet.
           </p>
-          <img src="/imgs/pil.svg" alt="pil" />
+          <img class="pil" src="/imgs/pil.svg" alt="pil" />
         </div>
-        <div><img src="/imgs/bowl_udenbg.png" alt="skål" /></div>
+        <div class="index_bowl">
+          <img src="/imgs/bowl_udenbg.png" alt="skål" />
+        </div>
       </section>
-      <section class="grid_1-1">
+      <section class="grid1_1-1">
         <div><img src="/imgs/tools.JPG" alt="værktøjer i værkstedet" /></div>
-        <div>
+        <div class="fremgang">
           <h2>SE FREMGANGSMÅDE</h2>
           <p>
             Her kan du du komme bag metoden fra grovdrejning, findrejdning til
             det færdige produkt. Samt hvilke værktøjer jeg gør brug af under
             hele processen.
           </p>
-          <img src="/imgs/pil.svg" alt="pil" />
+          <img class="pil" src="/imgs/pil.svg" alt="pil" />
         </div>
       </section>
     </main>
