--- a/producter.html
+++ b/producter.html
@@ -38,7 +38,7 @@
       <div class="skaalcontainer text2">
         <div>
           <div class="center skol05">
-            <div><img src="imgs/skål0523.webp" alt="skål" /></div>
+            <div><img class="skol1" src="imgs/skål0523.webp" alt="skål" /></div>
             <div>
               <p>Ceder d28-h17</p>
               <p>750,-</p>
@@ -46,48 +46,146 @@
           </div>
         </div>
         <div class="center skol09">
-          <div><img src="imgs/skål0923.webp" alt="skål" /></div>
+          <div><img class="skol1" src="./imgs/skål0923.webp" alt="skål" /></div>
           <div>
             <p>Mahogni d31 h5,5</p>
             <p>90,-</p>
           </div>
         </div>
         <div class="center skol14">
-          <div><img src="imgs/skål1421.webp" alt="skål" /></div>
+          <div><img class="skol1" src="imgs/skål1421.webp" alt="skål" /></div>
           <div>
             <p>Ceder d9,5 h9,5</p>
             <p>50,-</p>
           </div>
         </div>
         <div class="center skol20">
-          <div><img src="imgs/skål2023.webp" alt="" /></div>
+          <div><img class="skol1" src="imgs/skål2023.webp" alt="skål" /></div>
           <div>
             <p>Cypres d20 h8</p>
             <p>200,-</p>
           </div>
         </div>
         <div class="center skol21">
-          <div><img src="imgs/skål2122.webp" alt="" /></div>
+          <div><img class="skol1" src="imgs/skål2122.webp" alt="skål" /></div>
           <div>
             <p>Ceder d16 h8</p>
             <p>200,-</p>
           </div>
         </div>
         <div class="center skol30">
-          <div><img src="imgs/skål3023.webp" alt="" /></div>
+          <div><img class="skol1" src="imgs/skål3023.webp" alt="skål" /></div>
           <div>
             <p>Ceder d29 h11</p>
             <p>850,-</p>
           </div>
         </div>
-        <div class="center skol14">
+        <div class="center skol31">
+          <div><img class="skol1" src="imgs/skål3123.webp" alt="skål" /></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol32">
+          <div><img class="skol1" src="imgs/skål3322.webp" alt="skål" /></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol33">
+          <div><img src="imgs/skål3322.webp" alt="" /></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol34">
           <div></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
-        <div class="center skol14">
+        <div class="center skol35">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol47">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol51">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol52">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol53">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol57">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol59">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol61">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol81">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol84">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol92">
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="center skol94">
           <div></div>
           <div>
             <p></p>
