--- a/historie.html
+++ b/historie.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <main>
-
+<div class="splashimgs">
       <div class="historieh1">
         <h1>OM DREJ</h1>
       </div>
@@ -39,7 +39,10 @@
       <img src="imgs/jensmedskaal.webp" alt="jensmedskaal"/>
 </div>
     </div>
-    
+    <div>
+    <iframe src="imgs/finjustering og musik.webm" frameborder="0"></iframe>
+  </div>
+  </div>
     </main>
     <footer>
       <div>
