alle skåle oplud

--- a/producter.html
+++ b/producter.html
@@ -95,98 +95,98 @@
           </div>
         </div>
         <div class="center skol33">
-          <div><img src="imgs/skål3322.webp" alt="" /></div>
+          <div><img class="skol1" src="imgs/skål3322.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol34">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål3423.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol35">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål3522.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol47">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål4720.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol51">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål5123.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol52">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål5223.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol53">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål5323.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol57">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål5723.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol59">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål5923.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol61">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål6123.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol81">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål8123.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol84">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål8423.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol92">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål9223.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
           </div>
         </div>
         <div class="center skol94">
-          <div></div>
+          <div><img class="skol1" src="imgs/skål9423.webp" alt="skål" /></div>
           <div>
             <p></p>
             <p></p>
