--- a/producter.html
+++ b/producter.html
@@ -83,8 +83,8 @@
         <div class="center skol31">
           <div><img class="skol1" src="imgs/skål3123.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Ask</p>
+            <p>950,-</p>
           </div>
         </div>
         <div class="center skol32">
@@ -97,99 +97,99 @@
         <div class="center skol33">
           <div><img class="skol1" src="imgs/skål3322.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Robine d20 h9</p>
+            <p>500,-</p>
           </div>
         </div>
         <div class="center skol34">
           <div><img class="skol1" src="imgs/skål3423.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Robine d19 h6</p>
+            <p>300,-</p>
           </div>
         </div>
         <div class="center skol35">
           <div><img class="skol1" src="imgs/skål3522.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Rødel d28 h12</p>
+            <p>800,-</p>
           </div>
         </div>
         <div class="center skol47">
           <div><img class="skol1" src="imgs/skål4720.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Rødel d29 h11</p>
+            <p>750,-</p>
           </div>
         </div>
         <div class="center skol51">
           <div><img class="skol1" src="imgs/skål5123.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Ceder d24 h11</p>
+            <p>800,-</p>
           </div>
         </div>
         <div class="center skol52">
           <div><img class="skol1" src="imgs/skål5223.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Ceder d27 h10,5</p>
+            <p>850,-</p>
           </div>
         </div>
         <div class="center skol53">
           <div><img class="skol1" src="imgs/skål5323.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Ceder</p>
+            <p>700,-</p>
           </div>
         </div>
         <div class="center skol57">
           <div><img class="skol1" src="imgs/skål5723.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Rødel d21 h10,5</p>
+            <p>450,-</p>
           </div>
         </div>
         <div class="center skol59">
           <div><img class="skol1" src="imgs/skål5923.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Rødel d18 h12</p>
+            <p>400,-</p>
           </div>
         </div>
         <div class="center skol61">
           <div><img class="skol1" src="imgs/skål6123.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Mahogni d19 h6</p>
+            <p>400,-</p>
           </div>
         </div>
         <div class="center skol81">
           <div><img class="skol1" src="imgs/skål8123.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Eur Valnød d28 h6</p>
+            <p>800,-</p>
           </div>
         </div>
         <div class="center skol84">
           <div><img class="skol1" src="imgs/skål8423.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Kirsebær d21 h12</p>
+            <p>800,-</p>
           </div>
         </div>
         <div class="center skol92">
           <div><img class="skol1" src="imgs/skål9223.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Eg knude d22,5 h15,5</p>
+            <p>950,-</p>
           </div>
         </div>
         <div class="center skol94">
           <div><img class="skol1" src="imgs/skål9423.webp" alt="skål" /></div>
           <div>
-            <p></p>
-            <p></p>
+            <p>Eg knude d20 h19</p>
+            <p>950,-</p>
           </div>
         </div>
       </div>
