--- a/proces.html
+++ b/proces.html
@@ -27,7 +27,7 @@
     </header>
     <main>
       <div class="under">
-        <img src="https://picsum.photos/1470/700" alt="" />
+        <img src="/imgs/drejebenklysere.webp" alt="drejebenk" />
       </div>
       <div class="over"><h1>proses</h1></div>
       <div class="top">
@@ -50,7 +50,7 @@
         <div class="item_1 text">
           <h3>Tøring</h3>
           <p>
-            Når klodsen skaL grovdrejes, skruer jeg en planskive på klodsens
+            Når klodsen skal grovdrejes, skruer jeg en planskive på klodsens
             flade side, så jeg kan montere den på drejebænken. Herefter drejes
             ydersiden af og der formes en tenon på skålens bund. Herefter
             spændes skålen op på tenonen i en spændpatron, og skålens indre
@@ -62,7 +62,7 @@
           </p>
         </div>
         <div class="item_2">
-          <img src="https://picsum.photos/600/600" alt="" />
+          <img src="imgs/IMG_4312.webp" alt="skaal med papir" />
         </div>
       </div>
 
@@ -70,7 +70,7 @@
         <div class="item_2_1">
           <h3>Grovdrejning</h3>
           <p>
-            Når klodsen skaL grovdrejes, skruer jeg en planskive på klodsens
+            Når klodsen skal grovdrejes, skruer jeg en planskive på klodsens
             flade side, så jeg kan montere den på drejebænken. Herefter drejes
             ydersiden af og der formes en tenon på skålens bund. Herefter
             spændes skålen op på tenonen i en spændpatron, og skålens indre
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="over">
-        <h2>2. fin drjning</h2>
+        <h2>2. Findrejning</h2>
       </div>
       <div class="flex_c1 text">
         <div>
