--- a/proces.html
+++ b/proces.html
@@ -26,10 +26,10 @@
       </nav>
     </header>
     <main>
-      <div class="under">
-        <img src="/imgs/drejebenklysere.webp" alt="drejebenk" />
-      </div>
-      <div class="over"><h1>proses</h1></div>
+      <!-- <div class="under"> -->
+      <!-- <img src="/imgs/drejebenklysere.webp" alt="drejebenk" /> -->
+      <!-- </div> -->
+      <div class="over"><h1>PROCES</h1></div>
       <div class="top">
         <p>
           Min drejebænk er en ældre, men nyrenoveret Promat drejebænk med
