--- a/proces.html
+++ b/proces.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="imgs/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/projecter.css" />
+    <link rel="stylesheet" href="css/proces.css" />
     <title>Process</title>
   </head>
   <body>
