--- a/proces.html
+++ b/proces.html
@@ -90,7 +90,7 @@
           <img src="https://picsum.photos/500/400" alt="" />
         </div>
         <div class="item_3">
-          <h3>Fra Grovdrejet til fin drejet</h3>
+          <h3>Fra Grovdrejet til findrejet</h3>
           <p>
             Er udgangspunktet grovdrejede skåle, starter jeg med at rette
             skålens overkant af med en elhøvl, så den bliver nogenlunde plan.
@@ -103,7 +103,7 @@
       </div>
       <div class="flex_c2 text">
         <div class="item_4">
-          <h3>Fin drjet skål</h3>
+          <h3>Findrejet skål</h3>
           <p>
             Når skålens ud- og indvendige sider er færdiggjort og slebet, vendes
             skålen og spændes op i spændpatronen monteret med 480 mm skålbakker.
@@ -115,7 +115,7 @@
         <div><img src="https://picsum.photos/600/400" alt="" /></div>
       </div>
       <div class="over">
-        <h2>3. slibning</h2>
+        <h2>3. Slibning</h2>
       </div>
       <div class="grid_3 text">
         <div class="flex_c3">
@@ -146,19 +146,19 @@
         </div>
       </div>
       <div class="over">
-        <h2>4. larkering</h2>
+        <h2>4. Larkering</h2>
       </div>
       <div class="text flex_c2 farve">
         <div><img src="https://picsum.photos/550/430" alt="" /></div>
         <div>
           <h3>penslingen</h3>
           <p>
-            Lakering Denne type pensel resulterer i en meget jævn fordeling af
-            lakken og efterlader den færdige overflade næsten helt glat uden
-            striber, der let kan mat-slibes til en silkeblød robust overflade.
-            Afhængig af arbejdstemperaturen fortynder jeg lakken i forholdet 1:1
-            eller 1:2 med Pur S9004 fortynder. Man skal prøve sig lidt frem,
-            lakken skal løbe sammen uden der opstår løbere. Det var Børge fra
+            Denne type pensel resulterer i en meget jævn fordeling af lakken og
+            efterlader den færdige overflade næsten helt glat uden striber, der
+            let kan mat-slibes til en silkeblød robust overflade. Afhængig af
+            arbejdstemperaturen fortynder jeg lakken i forholdet 1:1 eller 1:2
+            med Pur S9004 fortynder. Man skal prøve sig lidt frem, lakken skal
+            løbe sammen uden der opstår løbere. Det var Børge fra
           </p>
         </div>
       </div>
