--- a/proces.html
+++ b/proces.html
@@ -43,7 +43,7 @@
         </p>
       </div>
       <div class="over">
-        <h2>1 Tøring og Grovdrejning</h2>
+        <h2>Tøring og Grovdrejning</h2>
       </div>
 
       <div class="grid_1">
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="over">
-        <h2>2. Findrejning</h2>
+        <h2>Findrejning</h2>
       </div>
       <div class="flex_c1 text">
         <div>
@@ -115,7 +115,7 @@
         <div><img src="https://picsum.photos/600/400" alt="" /></div>
       </div>
       <div class="over">
-        <h2>3. Slibning</h2>
+        <h2>Slibning</h2>
       </div>
       <div class="grid_3 text">
         <div class="flex_c3">
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="over">
-        <h2>4. Larkering</h2>
+        <h2>Larkering</h2>
       </div>
       <div class="text flex_c2 farve">
         <div><img src="https://picsum.photos/550/430" alt="" /></div>
