--- a/proces.html
+++ b/proces.html
@@ -120,7 +120,7 @@
       <div class="grid_3 text">
         <div class="flex_c3">
           <div>
-            <h3>værktøj</h3>
+            <h3>Værktøj</h3>
             <p>
               Korn 150 slibeskiver er svære at fremskaffe. Dem fremstiller jeg
               derfor selv ved at lime tyndt stof, der hæfter på velcro, bag på
@@ -133,7 +133,7 @@
         </div>
         <div class="flex_c3 box2">
           <div>
-            <h3>slibning</h3>
+            <h3>Slibning</h3>
             <p>
               Korn 150 slibeskiver er svære at fremskaffe. Dem fremstiller jeg
               derfor selv ved at lime tyndt stof, der hæfter på velcro, bag på
@@ -151,7 +151,7 @@
       <div class="text flex_c2 farve">
         <div><img src="https://picsum.photos/550/430" alt="" /></div>
         <div>
-          <h3>penslingen</h3>
+          <h3>Pensling</h3>
           <p>
             Denne type pensel resulterer i en meget jævn fordeling af lakken og
             efterlader den færdige overflade næsten helt glat uden striber, der
