--- a/producter.html
+++ b/producter.html
@@ -38,7 +38,9 @@
       <div class="skaalcontainer text2">
         <div>
           <div class="center skol05">
-            <div><img class="skol1" src="imgs/skål0523.webp" alt="skål" /></div>
+            <div>
+              <img class="skol1" src="imgs/skål0523.webp" alt="skål" />
+            </div>
             <div>
               <p>Ceder d28-h17</p>
               <p>750,-</p>
@@ -46,10 +48,12 @@
           </div>
         </div>
         <div class="center skol09">
-          <div><img class="skol1" src="./imgs/skål0923.webp" alt="skål" /></div>
+          <div>
+            <img class="skol2" src="./imgs/skål0923.webp" alt="skål" />
+          </div>
           <div>
             <p>Mahogni d31 h5,5</p>
-            <p>90,-</p>
+            <p>90o,-</p>
           </div>
         </div>
         <div class="center skol14">
@@ -59,6 +63,7 @@
             <p>50,-</p>
           </div>
         </div>
+
         <div class="center skol20">
           <div><img class="skol1" src="imgs/skål2023.webp" alt="skål" /></div>
           <div>
