--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <section class="grid_2-3">
         <div class="logo_boks">
-          <img class="test" src="/imgs/drejlogoheader.svg" alt="logo" />
+          <img src="/imgs/drejlogoheader.svg" alt="logo" />
         </div>
         <div class="grid_1-1-1-1">
           <img src="/imgs/udstilling.webp" alt="Jens og skåle på udstilling" />
