--- a/historie.html
+++ b/historie.html
@@ -20,29 +20,31 @@
           <a href="index.html">Hjem</a>
           <a href="producter.html">Galleri</a>
           <a href="proces.html">Process</a>
-          <a href="projecter.html">Projecter</a>
           <a href="historie.html">Om Drej</a>
         </ul>
       </nav>
     </header>
     <main>
-<div class="splashimgs">
-      <div class="historieh1">
-        <h1>OM DREJ</h1>
+      <div class="splashimgs">
+        <div class="historieh1">
+          <h1>OM DREJ</h1>
+        </div>
+        <div class="hobby">
+          <div class="hobbytekst">
+            <h2>FRA HOBBY TIL VIRKSOMHED</h2>
+            <p>bla bla bla bla bla bla</p>
+          </div>
+          <div class="jens">
+            <img src="imgs/jensmedskaal.webp" alt="jensmedskaal" />
+          </div>
+        </div>
+        <div>
+          <iframe
+            src="imgs/finjustering og musik.webm"
+            frameborder="0"
+          ></iframe>
+        </div>
       </div>
-      <div class="hobby">
-      <div class="hobbytekst">
-      <h2>FRA HOBBY TIL VIRKSOMHED</h2>
-      <p>bla bla bla bla bla bla</p>
-    </div>
-    <div class="jens">
-      <img src="imgs/jensmedskaal.webp" alt="jensmedskaal"/>
-</div>
-    </div>
-    <div>
-    <iframe src="imgs/finjustering og musik.webm" frameborder="0"></iframe>
-  </div>
-  </div>
     </main>
     <footer>
       <div>
