--- a/producter.html
+++ b/producter.html
@@ -39,7 +39,7 @@
         <div>
           <div class="center skol05">
             <div>
-              <img class="skol1" src="imgs/skål0523.webp" alt="skål" />
+              <img class="skol1 skol0" src="imgs/skål0523.webp" alt="skål" />
             </div>
             <div>
               <p>Ceder d28-h17</p>
@@ -53,7 +53,7 @@
           </div>
           <div>
             <p>Mahogni d31 h5,5</p>
-            <p>90o,-</p>
+            <p>900,-</p>
           </div>
         </div>
         <div class="center skol14">
