--- a/producter.html
+++ b/producter.html
@@ -35,17 +35,16 @@
         skål nummer og årstal, 74/19 betyder skål nr 74 produseret i 2019.
       </p>
       <div class="skaalcontainer text2">
-        <div>
-          <div class="center skol05">
-            <div>
-              <img class="skol1 skol0" src="imgs/skål0523.webp" alt="skål" />
-            </div>
-            <div>
-              <p>Ceder d28-h17</p>
-              <p>750,-</p>
-            </div>
+        <div class="center skol05">
+          <div>
+            <img class="skol0" src="imgs/skål0523.webp" alt="skål" />
+          </div>
+          <div>
+            <p>Ceder d28-h17</p>
+            <p>750,-</p>
           </div>
         </div>
+
         <div class="center skol09">
           <div>
             <img class="skol2" src="./imgs/skål0923.webp" alt="skål" />
@@ -64,14 +63,14 @@
         </div>
 
         <div class="center skol20">
-          <div><img class="skol1" src="imgs/skål2023.webp" alt="skål" /></div>
+          <div><img class="skol3" src="imgs/skål2023.webp" alt="skål" /></div>
           <div>
             <p>Cypres d20 h8</p>
             <p>200,-</p>
           </div>
         </div>
         <div class="center skol21">
-          <div><img class="skol1" src="imgs/skål2122.webp" alt="skål" /></div>
+          <div><img class="skol3" src="imgs/skål2122.webp" alt="skål" /></div>
           <div>
             <p>Ceder d16 h8</p>
             <p>200,-</p>
@@ -85,7 +84,7 @@
           </div>
         </div>
         <div class="center skol31">
-          <div><img class="skol1" src="imgs/skål3123.webp" alt="skål" /></div>
+          <div><img class="skol2" src="imgs/skål3123.webp" alt="skål" /></div>
           <div>
             <p>Ask</p>
             <p>950,-</p>
@@ -106,14 +105,14 @@
           </div>
         </div>
         <div class="center skol34">
-          <div><img class="skol1" src="imgs/skål3423.webp" alt="skål" /></div>
+          <div><img class="skol4" src="imgs/skål3423.webp" alt="skål" /></div>
           <div>
             <p>Robine d19 h6</p>
             <p>300,-</p>
           </div>
         </div>
         <div class="center skol35">
-          <div><img class="skol1" src="imgs/skål3522.webp" alt="skål" /></div>
+          <div><img class="skol3" src="imgs/skål3522.webp" alt="skål" /></div>
           <div>
             <p>Rødel d28 h12</p>
             <p>800,-</p>
@@ -127,14 +126,14 @@
           </div>
         </div>
         <div class="center skol51">
-          <div><img class="skol1" src="imgs/skål5123.webp" alt="skål" /></div>
+          <div><img class="skol4" src="imgs/skål5123.webp" alt="skål" /></div>
           <div>
             <p>Ceder d24 h11</p>
             <p>800,-</p>
           </div>
         </div>
         <div class="center skol52">
-          <div><img class="skol1" src="imgs/skål5223.webp" alt="skål" /></div>
+          <div><img class="skol3" src="imgs/skål5223.webp" alt="skål" /></div>
           <div>
             <p>Ceder d27 h10,5</p>
             <p>850,-</p>
