ny skål til index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <img class="pil" src="/imgs/pil.svg" alt="pil" />
         </div>
         <div class="index_bowl">
-          <img src="/imgs/bowl_udenbg.png" alt="skål" />
+          <img src="/imgs/skål3322.webp" alt="skål" />
         </div>
       </section>
       <section class="grid1_1-1">
