--- a/proces.html
+++ b/proces.html
@@ -78,7 +78,7 @@
           </p>
         </div>
         <div class="item_2_2">
-          <img src="https://picsum.photos/550/250" alt="" />
+          <img src="imgs/IMG_4559.webp" alt="grovdrejning" />
         </div>
       </div>
       <div class="over">
