--- a/proces.html
+++ b/proces.html
@@ -86,7 +86,7 @@
       </div>
       <div class="flex_c1 text">
         <div>
-          <img src="https://picsum.photos/500/400" alt="" />
+          <img src="imgs/image.webp" alt="findrejetskål" />
         </div>
         <div class="item_3">
           <h3>Fra Grovdrejet til findrejet</h3>
@@ -111,7 +111,7 @@
             sider.
           </p>
         </div>
-        <div><img src="https://picsum.photos/600/400" alt="" /></div>
+        <div><img src="imgs/prosessbilde1.webp" alt="" /></div>
       </div>
       <div class="over">
         <h2>Slibning</h2>
