--- a/proces.html
+++ b/proces.html
@@ -124,7 +124,7 @@
                 </p>
               </div>
             </div>
-            <div><img src="imgs/prosessbilde1.webp" alt="" /></div>
+            <div><img src="imgs/prosessbilde1.webp" alt="slibning" /></div>
           </div>
         </div>
         <div class="flex_c3 box2">
@@ -137,7 +137,7 @@
             </p>
           </div>
           <div>
-            <img src="imgs/prosessbilde2.webp" alt="" />
+            <img src="imgs/prosessbilde2.webp" alt="slibning" />
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
         <h2>Larkering</h2>
       </div>
       <div class="text flex_c2 farve">
-        <div><img src="imgs/prosessbilde3.webp" alt="" /></div>
+        <div><img src="imgs/prosessbilde3.webp" alt="pensling" /></div>
         <div>
           <h3>Pensling</h3>
           <p>
