--- a/proces.html
+++ b/proces.html
@@ -25,6 +25,7 @@
       </nav>
     </header>
     <main>
+      <div class="forsidebilde"></div>
       <!-- <div class="under"> -->
       <!-- <img src="/imgs/drejebenklysere.webp" alt="drejebenk" /> -->
       <!-- </div> -->
@@ -64,7 +65,6 @@
           <img src="imgs/IMG_4312.webp" alt="skaal med papir" />
         </div>
       </div>
-
       <div class="grid_2 text">
         <div class="item_2_1">
           <h3>Grovdrejning</h3>
