--- a/producter.html
+++ b/producter.html
@@ -198,17 +198,19 @@
       </div>
     </main>
     <footer>
-      <div>
-        <img src="imgs/drejlogofooter.svg" alt="drejlogo" />
-      </div>
-      <div>
-        <h2>adresse</h2>
-        <p>Tårnvænget 46 3300 Frederiksværk</p>
-      </div>
-      <div>
-        <h2>kontakt</h2>
-        <p>j.k.hojvang@gmail.com</p>
-        <p>+4526187560</p>
+      <div class="fod">
+        <div>
+          <img class="fodimg" src="imgs/drejlogofooter.svg" alt="drejlogo" />
+        </div>
+        <div>
+          <h2>adresse</h2>
+          <p>Tårnvænget 46 3300 Frederiksværk</p>
+        </div>
+        <div>
+          <h2>kontakt</h2>
+          <p>j.k.hojvang@gmail.com</p>
+          <p>+4526187560</p>
+        </div>
       </div>
     </footer>
     <script src="script.js"></script>
