link til pilene

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
           </p>
         </div>
         <div class="index_bowl">
-          <img class="bowl3" src="/imgs/skål3322.webp" alt="skål" />
+          <a href="producter.html"
+            ><img class="bowl3" src="/imgs/skål3322.webp" alt="skål"
+          /></a>
           <img class="pil" src="/imgs/pil.svg" alt="pil" />
         </div>
       </section>
@@ -64,7 +66,9 @@
             det færdige produkt. Samt hvilke værktøjer jeg gør brug af under
             hele processen.
           </p>
-          <img class="pil2" src="/imgs/pil.svg" alt="pil" />
+          <a href="proces.html"
+            ><img class="pil2" src="/imgs/pil.svg" alt="pil"
+          /></a>
         </div>
       </section>
     </main>
