index mangler kun logo

--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
           </p>
         </div>
         <div class="index_bowl">
-          <a href="producter.html"
-            ><img class="bowl3" src="/imgs/skål3322.webp" alt="skål"
-          /></a>
-          <img class="pil" src="/imgs/pil.svg" alt="pil" />
+          <img class="bowl3" src="/imgs/skål3322.webp" alt="skål" />
+          <div class="link_pil1">
+            <a href="producter.html"
+              ><img class="pil" src="/imgs/pil.svg" alt="pil"
+            /></a>
+          </div>
         </div>
       </section>
       <section class="grid1_1-1">
@@ -66,9 +68,11 @@
             det færdige produkt. Samt hvilke værktøjer jeg gør brug af under
             hele processen.
           </p>
-          <a href="proces.html"
-            ><img class="pil2" src="/imgs/pil.svg" alt="pil"
-          /></a>
+          <div class="link_pil">
+            <a href="proces.html"
+              ><img class="pil2" src="/imgs/pil.svg" alt="pil"
+            /></a>
+          </div>
         </div>
       </section>
     </main>
